--- a/main.css
+++ b/main.css
@@ -4,7 +4,12 @@
 }
 
 body{
-    background: #fcfcfc;
+    background: #c5dfe2;
+    background-image: url('medios/imagen2.jpg');
+    background-size: cover; 
+    background-repeat: no-repeat; 
+
+    
 }
 
 .contenedor{
@@ -12,6 +17,7 @@ body{
     width: 900px;
     margin-top: 300px;
     text-align: center;
+    font-family: "Georgia", sans-serif;
 }
 
 .titulo{
@@ -22,7 +28,7 @@ body{
     background: black;
     display: initial;
     padding: 12px;
-    color: #ffffff;
+    color: #cabe10;
     border-radius: 2px;
     font-weight: bold;
 }
@@ -57,4 +63,23 @@ p.p2:hover{
     color: #ffffff;
     padding: 50px;
     display: none;
+}
+
+#imagen {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%; 
+}
+
+
+#texto-superior {
+    position: absolute;
+    top: 10px; 
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 24px; 
+    color: rgb(0, 0, 0); 
 }
